FIX:fix cache bug,items with same atributes and digits in cart-element

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "CATEGORYLIST",
+        "Deduplication",
         "dompurify",
         "querys",
         "Raleway",
